--- a/Maze_EasyX/Maze_EasyX.vcxproj
+++ b/Maze_EasyX/Maze_EasyX.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="Maze.h" />
     <ClInclude Include="MazeData.h" />
     <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="prim.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
