--- a/Maze_EasyX/Maze_EasyX.vcxproj.filters
+++ b/Maze_EasyX/Maze_EasyX.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="MainWindow.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="prim.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
